--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <nav>
     <a href="index.html">Home</a>
-    <a href="places.html">Places</a>
+    <a href="place.html">Places</a>
     <a href="gallery.html">Gallery</a>
-    <a href="booking.html">Booking</a>
+    <a href="book.html">Booking</a>
     <a href="contact.html">Contact</a>
 </nav>
 
